docs/docsite/_themes/sphinx_rtd_theme/static/css/theme.css
/* ... */
.wy-menu-vertical li.current a{color:gray;border-right:solid 1px #c9c9c9;padding:.4045em 2.427em}
.wy-menu-vertical li.current a:hover{background:#d6d6d6}
.wy-menu-vertical li code,.wy-menu-vertical li .rst-content tt,.rst-content .wy-menu-vertical li tt{border:none;background:inherit;color:inherit;padding-left:0;padding-right:0}
.wy-menu-vertical li span.toctree-expand{display:block;float:left;margin-left:-1.2em;font-size:.8em;line-height:1.6em;color:#4d4d4d}
.wy-menu-vertical li.on a,.wy-menu-vertical li.current>a{color:#404040;padding:.4045em 1.618em;font-weight:bold;position:relative;background:#fcfcfc;border:none;padding-left:1.618em -4px}
.wy-menu-vertical li.on a:hover,.wy-menu-vertical li.current>a:hover{background:#fcfcfc}
.wy-menu-vertical li.on a:hover span.toctree-expand,.wy-menu-vertical li.current>a:hover span.toctree-expand{color:gray}
.wy-menu-vertical li.on a span.toctree-expand,.wy-menu-vertical li.current>a span.toctree-expand{display:block;font-size:.8em;line-height:1.6em;color:#333}
.wy-menu-vertical li.toctree-l1.current>a{border-bottom:solid 1px #c9c9c9;border-top:solid 1px #c9c9c9}
.wy-menu-vertical li.toctree-l1.current li.toctree-l2>ul,.wy-menu-vertical li.toctree-l2.current li.toctree-l3>ul{display:none}
.wy-menu-vertical li.toctree-l1.current li.toctree-l2.current>ul,.wy-menu-vertical li.toctree-l2.current li.toctree-l3.current>ul{display:block}
.wy-menu-vertical li.toctree-l2.current>a{background:#c9c9c9;padding:.4045em 2.427em}
.wy-menu-vertical li.toctree-l2.current li.toctree-l3>a{display:block;background:#c9c9c9;padding:.4045em 4.045em}
.wy-menu-vertical li.toctree-l2 a:hover span.toctree-expand{color:gray}
.wy-menu-vertical li.toctree-l2 span.toctree-expand{color:#a3a3a3}
.wy-menu-vertical li.toctree-l3{font-size:.9em}
.wy-menu-vertical li.toctree-l3.current>a{background:#bdbdbd;padding:.4045em 4.045em}
.wy-menu-vertical li.toctree-l3.current li.toctree-l4>a{display:block;background:#bdbdbd;padding:.4045em 5.663em}
.wy-menu-vertical li.toctree-l3 a:hover span.toctree-expand{color:gray}
.wy-menu-vertical li.toctree-l3 span.toctree-expand{color:#969696}
.wy-menu-vertical li.toctree-l4{font-size:.9em}
.wy-menu-vertical li.current ul{display:block}
.wy-menu-vertical li ul{margin-bottom:0;display:none}
.wy-menu-vertical .local-toc li ul{display:block}
.wy-menu-vertical li ul li a{margin-bottom:0;color:#b3b3b3;font-weight:normal}
.wy-menu-vertical a{display:inline-block;line-height:18px;padding:.4045em 1.618em;display:block;position:relative;font-size:90%;color:#b3b3b3}
.wy-menu-vertical a:hover{background-color:#4e4a4a;cursor:pointer}
.wy-menu-vertical a:hover span.toctree-expand{color:#b3b3b3}
.wy-menu-vertical a:active{background-color:#2980B9;cursor:pointer;color:#fff}
.wy-menu-vertical a:active span.toctree-expand{color:#fff}
.wy-side-nav-search{display:block;padding:4px;margin-bottom:.4px;z-index:200;background-color:#5bbdbf;text-align:center;padding:4px;display:block;color:#fcfcfc;margin-bottom:.809em}
.wy-side-nav-search input[type=text]{width:100%;border-radius:50px;padding:6px 12px;border-color:#2472a4}
.wy-side-nav-search img{display:block;margin:auto auto .809em auto;height:45px;width:45px;background-color:#2980B9;padding:5px;border-radius:100%}
.wy-side-nav-search>a,.wy-side-nav-search .wy-dropdown>a{color:#fcfcfc;font-size:100%;font-weight:bold;display:inline-block;padding:4px 6px;margin-bottom:.809em}
.wy-side-nav-search>a:hover,.wy-side-nav-search .wy-dropdown>a:hover{background:rgba(255,255,255,0.1)}
.wy-side-nav-search>a img.logo,.wy-side-nav-search .wy-dropdown>a img.logo{display:block;margin:0 auto;height:auto;width:auto;border-radius:0;max-width:100%;background:transparent}
.wy-side-nav-search>a.icon img.logo,.wy-side-nav-search .wy-dropdown>a.icon img.logo{margin-top:.85em}
.wy-side-nav-search>div.version{margin-top:-.4045em;margin-bottom:.809em;font-weight:normal;color:rgba(255,255,255,0.3)}
.wy-nav .wy-menu-vertical header{color:#2980B9}
.wy-nav .wy-menu-vertical a{color:#b3b3b3}
.wy-nav .wy-menu-vertical a:hover{background-color:#2980B9;color:#fff}
[data-menu-wrap]{-webkit-transition:all .2s ease-in;-moz-transition:all .2s ease-in;transition:all .2s ease-in;position:absolute;opacity:1;width:100%;opacity:0}
[data-menu-wrap].move-center{left:0;right:auto;opacity:1}
[data-menu-wrap].move-left{right:auto;left:-100%;opacity:0}
[data-menu-wrap].move-right{right:-100%;left:auto;opacity:0}
.wy-body-for-nav{background:#fcfcfc}
.wy-grid-for-nav{position:relative;width:100%;height:100%}
.wy-nav-side{position:fixed;float: left;top:0;bottom:0;left:0;padding-bottom:2em;width:300px;overflow-x:hidden;overflow-y:hidden;min-height:100%;background:#343131;z-index:0;margin-top:0px;top:45px;}
.wy-side-scroll{position:relative;overflow-x:hidden;overflow-y:scroll;height:100%}
.wy-nav-top{display:none;background:#2980B9;color:#fff;padding:.4045em .809em;position:relative;line-height:50px;text-align:center;font-size:100%;*zoom:1}
.wy-nav-top:before,.wy-nav-top:after{display:table;content:""}
.wy-nav-top:after{clear:both}
.wy-nav-top a{color:#fff;font-weight:bold}
.wy-nav-top img{margin-right:12px;height:45px;width:45px;background-color:#2980B9;padding:5px;border-radius:100%}
.wy-nav-top i{font-size:30px;float:left;cursor:pointer;padding-top:inherit}
@media screen and (max-width: 768px){.wy-nav-content-wrap{margin-top: 30px;margin-left: 300px;width: 100%;float:left;background:#fcfcfc;min-height:100%;position:fixed;top:15px;}
}
@media screen and (min-width: 768px){.wy-nav-content-wrap{margin-top: 30px;margin-left: 300px;width: calc(100% - 300px);float:left;background:#fcfcfc;min-height:100%}
}
.wy-nav-content{padding:1.618em 3.236em;height:100%;margin:auto;overflow-x: hidden;overflow-y: scroll;position: fixed;width: inherit}
.wy-body-mask{position:fixed;width:100%;height:100%;background:rgba(0,0,0,0.2);display:none;z-index:499}
.wy-body-mask.on{display:block}
footer{color:gray}
footer p{margin-bottom:12px}
/* ... */

